Mon, Jun 23 2003 (1.0.1)
 * polishing a code - drop unused variables, etc.
 * gmime-stream-perlio.c - fixed compilation problems with multithreaded perl

Sat, Jun 21 2003
 * fixed wrong HV interpretation in $parser->set_header_regex()
   Add new test paragraph for that case.

Mon, Jun 18 2003 (1.0.0)
 * split Fast.xs into separate classes located in Fast/ directory
 * new filter added - MIME::Fast::Filter::Enriched
 * new function MIME::Fast::Parser::[sg]et_persist_stream
 * objects unsupported in gmime (Message-Disposition and Message-MDN)
   are included but not compiled in (embraced with _UNSUPPORTED macros
   that can be enabled in Makefile.PL)
 * fixed a bug in construct_message when method used with parser argument
 * new enhanced test file t/parser.t
 * new subdirectory cincluse/ for gmime new functions
 * cleaned gmime-newfunc.c (set_date_from_string hardencoded info Fast/Message.xs)
 * new GMimeStreamPerlIO gmime plugin - this is used by the perl module
   as a default stream for file handles, as well as for all the PerlIO
   objects.
 * new function MIME::Fast::Parser::set_header_regex() - a function
   is called during header parsing when given regex would match

Fri, Jun 13 2003 (0.2.2)
 * fixed a bug with foreach_part method (Thanks to 
   Ramprasad A Padmanabhan for testing)

Fri, Jun 13 2003 (0.2.1)
 * fixed problem with filehandles closed by gmime in MIME::Fast::Stream

Thu, Jun 12 2003 (0.2)
 * finished fixing bugs, and update to gmime 2.0.8
 * Fast.xs:
   - new function constat_string for string constants
   - new GMime objects/types:
     = enums:
     + MIME::Fast::BestEncoding 
     + MIME::Fast::FilterFromMode
     + Mime::Fast::FilterYencDirection
     = objects/types:
     + MIME::Fast::Object
     + MIME::Fast::Parser
     + MIME::Fast::MultiPart
     + MIME::Fast::MessagePart
     + MIME::Fast::MessagePartial
     + MIME::Fast::Disposition
     + MIME::Fast::StreamFilter
     + MIME::Fast::Filter::Basic
     + MIME::Fast::Filter::Best